connected to mongo and keycloak

--- a/compose.yml
+++ b/compose.yml
@@ -6,8 +6,53 @@ services:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
     volumes:
-    - mongo_data
+    - mongo_data:/data/db
+    ports:
+      - "27017:27017"
+  postgres:
+    image: postgres
+    restart: always
+    # set shared memory limit when using docker-compose
+    shm_size: 128mb
+    # or set shared memory limit when deploy via swarm stack
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_PASSWORD: example
+    
 
+  keycloak:
+    restart: always
+    depends_on:
+      - postgres
+    build:
+      context: ./keycloak
+      dockerfile: Dockerfile
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+    ports:
+      - "8080:8080"
+
+  backend:
+    restart: always
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    ports:
+      - "5000:5000"
+    env_file:
+      - ./backend/.env
+    depends_on:
+      - keycloak
+      - mongo
+    working_dir: /backend
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8081:8081
 
   mongo-express:
     image: mongo-express
@@ -19,53 +64,7 @@ services:
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
       ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
       ME_CONFIG_BASICAUTH: false
-      
-
-  keycloak:
-    restart: always
-    build:
-      context: ./keycloak
-      dockerfile: Dockerfile
-    environment:
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin
-    ports:
-      - "8080:8080"
-    command:
-      - "start-dev"
-
-  backend:
-    # restart: always
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    ports:
-      - "5000:5000"
-    env_file:
-      - ./backend/.env
-    depends_on:
-      - keycloak
-    working_dir: /backend
-
-  postgres:
-    image: postgres
-    restart: always
-    # set shared memory limit when using docker-compose
-    shm_size: 128mb
-    # or set shared memory limit when deploy via swarm stack
-    volumes:
-      - type: tmpfs
-        target: /dev/shm
-        tmpfs:
-          size: 134217728 # 128*2^20 bytes = 128Mb
-    environment:
-      POSTGRES_PASSWORD: example
-
-  adminer:
-    image: adminer
-    restart: always
-    ports:
-      - 8081:8081
 
 volumes:
   mongo_data:
+  postgres_data:
