--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /backend
 COPY ./package.json ./
 COPY ./bun.lockb ./
 COPY ./.env ./
-
+COPY ./keycloak.json ./
 RUN bun install
 
 COPY ./src ./src
