--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,11 @@
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
+    "keycloak-connect": "^25.0.0",
     "mongoose": "^8.4.1"
   }
 }
