--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,11 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "keycloak-connect": "^25.0.0",
     "mongoose": "^8.4.1"
   }
