--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,8 @@
-KEYCLOAK_CLIENT_SECRET="mG7AqgzKYscCencMBgUG546pkiuegdaM"
+KEYCLOAK_CLIENT_SECRET="mS8T6MVl9hZMET7Xnn7RyrJzqAmf8Uwj"
 KEYCLOAK_CLIENT_ID="todolist-nextjs"
 KEYCLOAK_ISSUER="http://localhost:8080/realms/simpleTodoList"
-NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL="http://localhost:3000/"
 NEXTAUTH_SECRET="s9/KZYY+cZOo5W0jOT+shL1vtxVB5j2zyxeVawKQL8o="
-TOKEN_ENDPOINT="http://localhost:8080/realms/simpleTodoList/protocol/openid-connect/token"
+TOKEN_ENDPOINT="http://keycloak:8080/realms/simpleTodoList/protocol/openid-connect/token"
+NEXT_PUBLIC_BACKEND_URL="http://backend:5000"
+AUTH_URL="http://localhost:8080/realms/simpleTodoList/protocol/openid-connect/auth"
