--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.394.0",
     "next": "14.2.4",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
