--- a/frontend/.env
+++ b/frontend/.env
@@ -1,10 +1,10 @@
-AUTH_KEYCLOAK_SECRET="1C48OQtpK0cRVb8W6dUhAcqXMk9XQpVu"
+AUTH_KEYCLOAK_SECRET="mPFYUq9Jsp4BScA1o9r4pnA4yyJ8tQxE"
 AUTH_KEYCLOAK_ID="todolist-nextjs"
 AUTH_KEYCLOAK_ISSUER="http://localhost:8080/realms/simpleTodoList"
 AUTH_URL="http://localhost:3000"
 AUTH_SECRET="s9/KZYY+cZOo5W0jOT+shL1vtxVB5j2zyxeVawKQL8o="
 AUTH_TOKEN_ENDPOINT="http://keycloak:8080/realms/simpleTodoList/protocol/openid-connect/token"
-NEXT_PUBLIC_BACKEND_URL="http://backend:5000"
+NEXT_PUBLIC_BACKEND_URL="http://localhost:5000"
 AUTH_KEYCLOAK_AUTH_URL="http://localhost:8080/realms/simpleTodoList/protocol/openid-connect/auth"
 AUTH_TRUST_HOST=true
 AUTH_WELL_KNOWN="http://localhost:8080/realms/simpleTodoList/.well-known/openid-configuration"
