--- a/k8s/keycloak.yaml
+++ b/k8s/keycloak.yaml
@@ -1,77 +1,9 @@
-# postgres-keycloak-setup.yaml
-
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: postgres-pv
-spec:
-  capacity:
-    storage: 128Mi
-  accessModes:
-    - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
-  hostPath:
-    path: /mnt/data/postgres
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: postgres-pvc
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 128Mi
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: postgres
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: postgres
-  template:
-    metadata:
-      labels:
-        app: postgres
-    spec:
-      containers:
-      - name: postgres
-        image: postgres:latest
-        ports:
-        - containerPort: 5432
-        env:
-        - name: POSTGRES_PASSWORD
-          value: "example"
-        volumeMounts:
-        - mountPath: /var/lib/postgresql/data
-          name: postgres-storage
-      volumes:
-      - name: postgres-storage
-        persistentVolumeClaim:
-          claimName: postgres-pvc
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: postgres
-spec:
-  ports:
-  - port: 5432
-    targetPort: 5432
-  selector:
-    app: postgres
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: keycloak
 spec:
-  replicas: 1
+  replicas: 1  # Adjust as needed
   selector:
     matchLabels:
       app: keycloak
@@ -81,41 +13,24 @@ spec:
         app: keycloak
     spec:
       containers:
-      - name: keycloak
-        image: mkurowskiug/tc-keycloak
-        ports:
-        - containerPort: 8080
-        env:
-        - name: KEYCLOAK_ADMIN
-          value: "admin"
-        - name: KEYCLOAK_ADMIN_PASSWORD
-          value: "admin"
-        - name: DB_VENDOR
-          value: "POSTGRES"
-        - name: DB_ADDR
-          value: "postgres"
-        - name: DB_DATABASE
-          value: "keycloak"
-        - name: DB_USER
-          value: "postgres"
-        - name: DB_PASSWORD
-          value: "example"
-        volumeMounts:
-        - mountPath: /opt/keycloak/data
-          name: keycloak-storage
-      volumes:
-      - name: keycloak-storage
-        emptyDir: {}
+        - name: keycloak
+          image: mkurowskiug/tc-keycloak:latest
+          env:
+            - name: KEYCLOAK_ADMIN
+              value: admin
+            - name: KEYCLOAK_ADMIN_PASSWORD
+              value: admin
+          ports:
+            - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: keycloak
 spec:
-  ports:
-  - port: 8080
-    targetPort: 8080
-    nodePort: 30000
   selector:
     app: keycloak
-  type: NodePort
+  ports:
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080
